web/geoguessr-app/src/components/ProfileCard.css
.profile-card-container {
  width: 40dvh;
  height: 70dvh;
  background: linear-gradient(
    to bottom,
    rgba(213, 151, 239, 0.8) 0%,
    rgba(204, 84, 251, 0.9) 20%,
    rgba(122, 30, 249) 100%
  );
  border-radius: 2dvh;
  overflow: hidden;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
  display: flex;
  flex-direction: column;
  transform: scale(1);
  transition: transform 0.3s ease, box-shadow 0.3s ease, background-position 0.5s ease-in-out;
  margin: 1dvh;
  letter-spacing: 0.05rem;
  background-size: 200% auto;
  background-position: left top;
}

.profile-card-container:hover {
  transform: scale(1.05);
  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.2);
  animation: fancy 0.5s ease-in-out;
  background-position: right bottom;
}

@keyframes fancy {
  0% {
    transform: scale(1) rotate(0deg);
  }
  25% {
    transform: scale(1.03) rotate(2deg);
  }
  50% {
    transform: scale(1.04) rotate(-2deg);
  }
  75% {
    transform: scale(1.05) rotate(2deg);
  }
  100% {
    transform: scale(1.05) rotate(0deg);
  }
}

.profile-card-image {
  padding: 2.5dvh;
  height: 40dvh;
  width: 100%;
  overflow: hidden;
}

.profile-card-image img {
  border-top-left-radius: 1dvh;
  border-top-right-radius: 1dvh;
  width: 100%;
  height: 100%;
}

.profile-card-content {
  padding-left: 2dvh;
  padding-right: 2dvh;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
}

.profile-card-name {
  font-size: 1.3rem;
  font-weight: 700;
  margin-bottom: 0.25dvh;
  letter-spacing: 0.08rem;
  color: rgb(244, 234, 97);
  opacity: 1 !important;
  text-align: center;
}

.profile-card-title {
  font-size: 0.875rem;
  color: #cfc4d5;
  margin-bottom: 0.5dvh;
  text-align: center;

}

.profile-card-body {
  color: #ffffff;
  font-size: 1rem;
  flex-grow: 1;
  overflow-y: auto;
  max-height: 20dvh;
  margin-bottom: 1dvh;
  font-family:monospace;
  font-weight: 800;
  letter-spacing: 0.01rem;
  padding: 1rem;
}

.profile-card-footer {
  padding: 1dvh;
  margin-top: auto;
}

.profile-card-footer a button {
  width: 100%;
  background: linear-gradient(
    to right,
    rgb(241, 93, 238),
    var(--color-accent1)
  );
  background-size: 200% auto;
  background-position: left center;
  color: #ffffff;
  font-weight: 500;
  padding: 0.5rem 1rem;
  margin-bottom: 1rem;
  border-width: 3px;
  border-color: #edcae6;
  border-radius: 0.375rem;
  cursor: pointer;
  transition: background-position 0.5s ease;
}

.profile-card-footer a button:hover {
  background-position: right center;
}

